--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -1,5 +1,6 @@
 {
   "overview": "Обзор",
   "projects": "Проекты",
-  "plans": "Планы"
+  "plans": "Планы",
+  "copyrights": "Авторские права &copy;2022 Все права защищены Kodemate"
 }
