--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,5 +1,6 @@
 {
   "overview": "Overview",
   "projects": "Projects",
-  "plans": "Plans"
+  "plans": "Plans",
+  "copyrights": "Copyrights &copy;2022 All rights reserved by Kodemate"
 }
