Fixed horizontal scroll on scaling

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -2,5 +2,5 @@
   "overview": "Overview",
   "projects": "Projects",
   "plans": "Plans",
-  "copyrights": "Copyrights &copy;2022 All rights reserved by Kodemate"
+  "copyrights": "Copyrights ©2022 All rights reserved by Kodemate"
 }
