--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -2,5 +2,5 @@
   "overview": "Обзор",
   "projects": "Проекты",
   "plans": "Планы",
-  "copyrights": "Авторские права &copy;2022 Все права защищены Kodemate"
+  "copyrights": "Авторские права ©2022 Все права защищены Kodemate"
 }
