--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,8 +1,7 @@
 {
   "header": {
     "overview": "Overview",
-    "projects": "Projects",
-    "plans": "Plans"
+    "about": "About us"
   },
   "overview": {
     "projects": "Our Projects",
