B-4: About us page

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -5,7 +5,8 @@
   },
   "overview": {
     "projects": "Наши проекты",
-    "services": "Наши услуги"
+    "services": "Наши услуги",
+    "team": "Наша команда"
   },
   "footer": {
     "copyrights": "Авторские права ©2022 Все права защищены Kodemate"
