--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -5,7 +5,8 @@
   },
   "overview": {
     "projects": "Our Projects",
-    "services": "Our Services"
+    "services": "Our Services",
+    "team": "Our Team"
   },
   "footer": {
     "copyrights": "Copyrights ©2022 All rights reserved by Kodemate"
