--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,6 +1,13 @@
 {
-  "overview": "Overview",
-  "projects": "Projects",
-  "plans": "Plans",
-  "copyrights": "Copyrights ©2022 All rights reserved by Kodemate"
+  "header": {
+    "overview": "Overview",
+    "about": "About us"
+  },
+  "overview": {
+    "projects": "Our Projects",
+    "services": "Our Services"
+  },
+  "footer": {
+    "copyrights": "Copyrights ©2022 All rights reserved by Kodemate"
+  }
 }
